--- a/ms-client/pom.xml
+++ b/ms-client/pom.xml
@@ -54,7 +54,36 @@
 		    <groupId>org.springdoc</groupId>
 		    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 		    <version>2.5.0</version>
-		</dependency>	   
+		</dependency>	
+			
+		<dependency>
+	      <groupId>org.springframework.boot</groupId>
+	      <artifactId>spring-boot-starter-data-redis</artifactId>
+	    </dependency>
+	    
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-testcontainers</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+	        <groupId>org.testcontainers</groupId>
+	        <artifactId>junit-jupiter</artifactId>
+	        <scope>test</scope>
+	    </dependency>    
+	    <dependency>
+	      	<groupId>org.testcontainers</groupId>
+	      	<artifactId>mongodb</artifactId>
+	      	<scope>test</scope>
+	    </dependency>
+	       
+	    <dependency>
+		    <groupId>com.redis</groupId>
+		    <artifactId>testcontainers-redis</artifactId>
+		    <version>2.2.2</version>
+		    <scope>test</scope>
+		</dependency>	
+		
 	</dependencies>
 
 	<build>
