--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,9 @@
 		<module>ms-flight</module>
 		<module>ms-seat</module>
 		<module>ms-reservation</module>
+		<module>ms-payment</module>
+		<module>ms-notification</module>
+		<module>ms-registry</module>
 	</modules>
 
 </project>
