--- a/ms-flight/src/main/resources/application.yml
+++ b/ms-flight/src/main/resources/application.yml
@@ -26,7 +26,14 @@ spring:
            json:
              trusted:
                packages: '*' 
-               
+     
+# JWT Server conf for client
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:9000
+                
   data:
     redis:
       database: 0
@@ -42,5 +49,30 @@ mongodb:
     
 server:
   port: 8082
-    
+     
+# Enable /actuator/info
+management:
+  info:
+    env:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: info, health, metrics
+ 
+  endpoint:
+    health:
+      probes:
+        enabled: true        
+  health:
+    livenessState:
+      enabled: true
+    readinessState:
+      enabled: true  
+             
+# Basic data for /actuator/info
+info:
+  app:
+    name: ${spring.application.name}
+    version: 1.0.0     
 
