--- a/ms-notification/src/main/resources/application-prod.yml
+++ b/ms-notification/src/main/resources/application-prod.yml
@@ -5,4 +5,9 @@ spring:
       bootstrap-servers: kafka:9092
     consumer:
       bootstrap-servers: kafka:9092 
-      
+       
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://ms-oauth2:9000      
