feat: add security oauth2 issuer

--- a/ms-registry/src/main/resources/application-prod.yml
+++ b/ms-registry/src/main/resources/application-prod.yml
@@ -12,4 +12,9 @@ spring:
   data:
     mongodb:
       uri: mongodb://sa:${MONGODB_PASS_WRITE:invalidPassword}@ms-registry-write-db:27017/mongo-write-db?authSource=admin
- 
+       
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://ms-oauth2:9000 
