--- a/ms-payment/src/main/resources/application.yml
+++ b/ms-payment/src/main/resources/application.yml
@@ -22,6 +22,41 @@ spring:
            json:
              trusted:
                packages: '*' 
-                                    
+    
+# JWT Server conf for client
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:9000
+                                      
 server:
   port: 0
+ 
+# Enable /actuator/info
+management:
+  info:
+    env:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: info, health, metrics
+ 
+  endpoint:
+    health:
+      probes:
+        enabled: true        
+  health:
+    livenessState:
+      enabled: true
+    readinessState:
+      enabled: true  
+             
+# Basic data for /actuator/info
+info:
+  app:
+    name: ${spring.application.name}
+    version: 1.0.0       
+
+    
