--- a/ms-registry/src/main/resources/application.yml
+++ b/ms-registry/src/main/resources/application.yml
@@ -33,19 +33,45 @@ spring:
     password: ${SQLDB_PASS:invalidPassword} 
   jpa:
     open-in-view: true
-    show-sql: true      
-   
-#    defer-datasource-initialization: true 
-#    hibernate:
-#      ddl-auto: create-drop
-#  sql:
-#    init:
-#      mode: always
+    show-sql: true 
                    
   data:  
     mongodb:
       uri: mongodb://sa:${MONGODB_PASS_WRITE:invalidPassword}@localhost:27024/mongo-write-db?authSource=admin
-    
+     
+# JWT Server conf for client
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:9000
+     
 server:
   port: 8085
-  
+ 
+# Enable /actuator/info
+management:
+  info:
+    env:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: info, health, metrics
+ 
+  endpoint:
+    health:
+      probes:
+        enabled: true        
+  health:
+    livenessState:
+      enabled: true
+    readinessState:
+      enabled: true  
+             
+# Basic data for /actuator/info
+info:
+  app:
+    name: ${spring.application.name}
+    version: 1.0.0       
+
