--- a/ms-seat/src/main/resources/application.yml
+++ b/ms-seat/src/main/resources/application.yml
@@ -34,7 +34,14 @@ spring:
       port: 6381
       password: ${REDISDB_PASS:invalidPassword}
       timeout: 60000
-                    
+     
+# JWT Server conf for client
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:9000
+                     
 mongodb:
   uri:
     read: mongodb://sa:${MONGODB_PASS_READ:invalidPassword}@localhost:27021/mongo-read-db?authSource=admin
@@ -42,6 +49,30 @@ mongodb:
     
 server:
   port: 8083
-    
-
+ 
+# Enable /actuator/info
+management:
+  info:
+    env:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: info, health, metrics
+ 
+  endpoint:
+    health:
+      probes:
+        enabled: true        
+  health:
+    livenessState:
+      enabled: true
+    readinessState:
+      enabled: true  
+             
+# Basic data for /actuator/info
+info:
+  app:
+    name: ${spring.application.name}
+    version: 1.0.0       
 
